--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^4.14.0",
     "next": "^15.0.0",
+    "posthog-js": "^1.328.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
