--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^4.14.0",
+    "@clerk/nextjs": "^6.36.10",
     "next": "^15.0.0",
     "posthog-js": "^1.328.0",
     "react": "^18.2.0",
